# Smart-Home-Interval-Camera

./: .gitignore  README.md
.github/workflows/: docker-image.yml
Client/main/: index.html  main.ino
Client/rust/esp32cam-project/: Cargo.toml
Client/rust/esp32cam-project/src/: build.rs  main.rs
Server/: app.py  index.html  prod.Dockerfile  run.bash  script.js  style.css  view.html
Server/static/: index.html  script.js  style.css
Server/static/css/: style.css
Server/static/js/: script.js
Server/templates/: index.html
