[package]
name = "esp32cam-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
esp-idf-sys = "0.34.1"
esp-idf-svc = "0.48.1"
esp-idf-hal = "0.43.1"
embedded-svc = "0.27.1"
esp32-hal = "0.18.1"
xtensa-lx-rt = "0.16.0"
cargo_toml = "0.19.2"

[build-dependencies]
embuild = "0.31.4"
anyhow = "1.0.82"

[target.'cfg(all(target_arch = "xtensa", target_os = "none"))']
rustflags = [
    "-C", "link-arg=-Tlink.x",
    "-C", "link-arg=-Tesp32c3.ld",
]